Yeni Dosya yüklenemsi.

--- a/YemekTarifi/Kullanici.Master
+++ b/YemekTarifi/Kullanici.Master
@@ -11,18 +11,17 @@
 </head>
 <body>
     <form id="form1" runat="server">
-        <div style="150px; width:700px; margin-left:300px; background-color:#CCCCFF;"></div>
-        <div style="300px; width:700px; height:20px;"> </div>
-        <div style="300px; width:700px; height:20px; background-color:#CCFFFF;"></div>
-        <div style="300px; width:700px; height:20px;"></div>
-        <div style="300px; width:200px; height:200px; background-color:#CCFFCC;"></div>
-        <div style="250px; width:350px; height:450px; background-color:#FFFFCC;">
-            <div>
-                <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-                </asp:ContentPlaceHolder>
+        <div style=" width:700px; margin-left:300px; background-color:#CCCCFF; height: 150px;"></div>
+        <div style="margin-left:300px; width:700px; height:20px;"> </div>
+        <div style="margin-left:300px; width:700px; height:20px; background-color:#CCFFFF;"></div>
+        <div style="margin-left:300px; width:700px; height:20px;"></div>
+        <div style="margin-left:300px; width:200px; height:200px; background-color:#CCFFCC;">
+            <div style="margin-left:250px; width:450px; height:450px; background-color:#FFFFCC;">
+            
+                    <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+                    </asp:ContentPlaceHolder>
             </div>
         </div>
-        
     </form>
 </body>
 </html>
