--- a/YemekTarifi/Kullanici.Master
+++ b/YemekTarifi/Kullanici.Master
@@ -17,6 +17,12 @@
             text-align: center;
             background-color: #FFFFFF;
         }
+        .auto-style3 {
+            font-size: large;
+        }
+        .auto-style4 {
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -43,14 +49,23 @@
         </div>
         <div style="margin-left:300px; width:700px; height:20px;"></div>
         <div style="margin-left:300px; width:700px; height:300px;">
-            <div style="float:left; width:200px; height:200px; background-color:#ce7171;">        
-                <asp:DataList ID="DataList1" runat="server">
+            <div style="float:left; width:200px; height:auto; background-color:#ce7171;">        
+                <div class="auto-style4">
+                    <strong><span class="auto-style3">KATEGORİLER<br />
+                    </span></strong>
+                    <br />
+                </div>
+                <asp:DataList ID="DataList1" runat="server" Height="137px" Width="199px">
                     <ItemTemplate>
-                        <asp:Label ID="Label1" runat="server" Text='<%# Eval("KategoriAd") %>'></asp:Label>
+                        <div style="border: thin solid #CCCCCC">
+                            <asp:Label ID="Label1" runat="server" Text='<%# Eval("KategoriAd") %>'></asp:Label>
+                            (
+                            <asp:Label ID="Label2" runat="server" Text='<%# Eval("KategoriAdet") %>'></asp:Label>
+                            )</div>
                     </ItemTemplate>
                 </asp:DataList>
             </div>
-            <div style="float:right; width:450px; height:450px; background-color:#ce7171;">
+            <div style="float:right; width:450px; height:auto; background-color:#ce7171;">
             
                     <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
                     </asp:ContentPlaceHolder>
