--- a/YemekTarifi/Admin.Master
+++ b/YemekTarifi/Admin.Master
@@ -37,10 +37,10 @@
                         <td style="border: thin solid #FFFFFF"><a href="Kategoriler.aspx">KATEGORİLER</a></td>
                     </tr>
                     <tr>
-                        <td style="border: thin solid #FFFFFF">YEMEKLER</td>
+                        <td style="border: thin solid #FFFFFF"><a href="Yemekler.aspx">YEMEKLER</a></td>
                     </tr>
                     <tr>
-                        <td style="border: thin solid #FFFFFF">YORUMLAR</td>
+                        <td style="border: thin solid #FFFFFF"><a href="Yorumlar.aspx">YORUMLAR</a></td>
                     </tr>
                     <tr>
                         <td style="border: thin solid #FFFFFF">MESAJLAR</td>
