--- a/YemekTarifi/Admin.Master
+++ b/YemekTarifi/Admin.Master
@@ -46,10 +46,10 @@
                         <td style="border: thin solid #FFFFFF"><a href="Mesajlar.aspx">MESAJLAR</a></td>
                     </tr>
                     <tr>
-                        <td style="border: thin solid #FFFFFF">GÜNÜN YEMEĞİ</td>
+                        <td style="border: thin solid #FFFFFF"><a href="GununYemegiAdmin.aspx">GÜNÜN YEMEĞİ</a></td>
                     </tr>
                     <tr>
-                        <td style="border: thin solid #FFFFFF">ÖNERİLER</td>
+                        <td style="border: thin solid #FFFFFF"><a href="Tarifler.aspx">TARİFLER</a></td>
                     </tr>
                     <tr>
                         <td style="border: thin solid #FFFFFF">HAKKIMIZDA</td>
