--- a/YemekTarifi/Admin.Master
+++ b/YemekTarifi/Admin.Master
@@ -52,7 +52,7 @@
                         <td style="border: thin solid #FFFFFF"><a href="Tarifler.aspx">TARİFLER</a></td>
                     </tr>
                     <tr>
-                        <td style="border: thin solid #FFFFFF">HAKKIMIZDA</td>
+                        <td style="border: thin solid #FFFFFF"><a href ="HakkimizdaDetay.aspx">HAKKIMIZDA</a></td>
                     </tr>
                 </table>
             </div>
